# auto-video-annotation

./: .gitignore  PLAN.md  keypoints copy.json  keypoints.json  keypoints_list.json  pyproject.toml
scripts/: annotate_one_frame.py
src/auto_video_annotation/: __init__.py  annotate.py  cli.py  keypoints.py  video.py  viz.py
src/auto_video_annotation/runners/: __init__.py  anthropic_runner.py  google_runner.py  openrouter_runner.py
